# XO_TicTacToe

./: .clang-format  CMakeLists.txt  README.md  game.c
